<project
	xsi:schemaLocation="https://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.asbestosstar</groupId>
	<artifactId>crashdetector</artifactId>
	<version>0.4.4</version>
	
	
	<!-- Add necessary metadata for Maven Central -->
	<name>CrashDetector</name>
	<description>Detects Crashes in JVM Apps.</description>
	<url>https://pagure.io/CrashDetectorMC</url>

	<licenses>
		<license>
			<name>Public Domain</name>
			<url>https://pagure.io/CrashDetectorMC/blob/main/f/LICENSE</url>
		</license>
	</licenses>
	
	
	
	
	<developers>
		<developer>
			<name>Asbestosstar</name>
			<email>asbestosstar@asbestosstar.com</email>
			<organization>Asbestosstar</organization>
			<organizationUrl>https://asbestosstar.com</organizationUrl>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:https://pagure.io/CrashDetectorMC.git</connection>
		<developerConnection>scm:git:ssh://git@pagure.io/CrashDetectorMC.git</developerConnection>
		<url>https://pagure.io/CrashDetectorMC</url>
	</scm>
	
	
	
	
		<!-- Distribution Management -->
	<distributionManagement>
		<snapshotRepository>
			<id>central</id>
			<url>https://central.sonatype.org/</url>
		</snapshotRepository>
		<repository>
			<id>central</id>
			<url>
				https://central.sonatype.org/</url>
		</repository>
	</distributionManagement>
	
	
	
	
	
	
	<build>
		<plugins>

			<!-- Add the Maven Compiler Plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<source>${maven.compiler.source}</source>
					<target>${maven.compiler.target}</target>
					<compilerArgs>
						<!-- Disable annotation processing -->
						<arg>-proc:none</arg>
						<!-- Suppress the warning message -->
						<arg>-Xlint:-options</arg>
					</compilerArgs>
				</configuration>
			</plugin>


			<!-- other plugins omitted -->
			<plugin>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.4.2</version>
				<configuration>
					<archive>
						<manifestEntries>
							<Premain-Class>
								com.asbestosstar.crashdetector.CrashDetectorFCMC
							</Premain-Class>
							<Can-Redefine-Classes>true</Can-Redefine-Classes>
							<Can-Retransform-Classes>true</Can-Retransform-Classes>
							<FMLModType>LIBRARY</FMLModType><!-- para NeoForge 1.21.9 -->

						</manifestEntries>
					</archive>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<dependencies>
		<!-- Gson Dependency -->
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.10.1</version>
		</dependency>

		<!-- Guava Dependency -->
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>31.1-jre</version>
		</dependency>

		<!-- Existing Dependencies -->
		<dependency>
			<groupId>net.fabricmc</groupId>
			<artifactId>fabric-loader</artifactId>
			<version>0.15.7</version>
		</dependency>
	
 <!-- https://mvnrepository.com/artifact/cpw.mods/modlauncher -->
<dependency>
    <groupId>cpw.mods</groupId>
    <artifactId>modlauncher</artifactId>
    <version>11.0.5</version>
</dependency>
	
 	 	 <dependency>
	
 	 		<groupId>cpw.mods</groupId>
	
 	 		<artifactId>modlauncher</artifactId>
	
 	 		<version>0.10.0</version>
	
 	 		<classifier>api</classifier>
	
 	 	</dependency>
	
	<dependency>
	
 		<groupId>cpw.mods</groupId>
	
 		<artifactId>grossjava9hacks</artifactId>
	
 		<version>1.3.3</version>
	
 	</dependency>
		<dependency>
			<groupId>net.minecraftforge</groupId>
			<artifactId>forgespi</artifactId>
			<version>6.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.spongepowered</groupId>
			<artifactId>mixin</artifactId>
			<version>0.8.5</version>
		</dependency>
		<dependency>
			<groupId>com.asbestosstar</groupId>
			<artifactId>featurecreep-loader</artifactId>
			<version>4.0pre19</version>
		</dependency>

	<dependency>
			<groupId>com.kaolinmc</groupId>
			<artifactId>tooling-api</artifactId>
			<version>1.1.3-SNAPSHOT</version>
		</dependency>



<!-- https://mvnrepository.com/artifact/org.javassist/javassist -->
<dependency>
    <groupId>org.javassist</groupId>
    <artifactId>javassist</artifactId>
    <version>3.27.0-GA</version>
</dependency>


<!-- https://mvnrepository.com/artifact/org.jboss/jboss-dmr -->
<dependency>
    <groupId>org.jboss</groupId>
    <artifactId>jboss-dmr</artifactId>
    <version>1.6.1.Final</version>
</dependency>

<dependency>
    <groupId>com.electronwill.night-config</groupId>
    <artifactId>toml</artifactId>
    <version>3.6.0</version>
</dependency>


<dependency>
    <groupId>net.neoforged.fancymodloader</groupId>
    <artifactId>loader</artifactId>
    <version>10.0.14</version>
</dependency>


	
		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
<dependency>
    <groupId>org.apache.logging.log4j</groupId>
    <artifactId>log4j-core</artifactId>
    <version>2.20.0</version>
</dependency>
		
		




		<!-- existe porque una limitacion de nivel src para servicio modlauncher
		. TODO publicar en Central
		<dependency>
			<groupId>com.github.Asbestosstar</groupId>
			<artifactId>special-waffle</artifactId>
			<version>0</version>
			<scope>compile</scope>
		</dependency>-->
<dependency>
  <groupId>org.mangorage</groupId>
  <artifactId>mangomodloader-api</artifactId>
  <version>1.1.3</version>
</dependency>


<!-- https://mvnrepository.com/artifact/io.github.CDAGaming/DiscordIPC -->
<dependency>
    <groupId>io.github.CDAGaming</groupId>
    <artifactId>DiscordIPC</artifactId>
    <version>0.10.2</version>
</dependency>


<!-- https://mvnrepository.com/artifact/net.fabricmc/cfr -->
<dependency>
    <groupId>net.fabricmc</groupId>
    <artifactId>cfr</artifactId>
    <version>0.2.2</version>
</dependency>







	</dependencies>
	<repositories>
	
	
	
	
		<repository>
			<id>central</id>
			<url>https://repo1.maven.org/maven2/</url>
		</repository>
		<repository>
			<id>jitpack.io</id>
			<url>https://www.jitpack.io</url>
		</repository>
	
		<repository>
			<id>cursemaven</id>
			<name>cursemaven</name>
			<url>https://cursemaven.com</url>
		</repository>
		<repository>
			<id>kaolinmc</id>
			<name>kaolinmc</name>
			<url>https://maven.kaolinmc.com/snapshots</url>
		</repository>
			<repository>
			<id>mangorage</id>
			<name>mangorage</name>
			<url>https://maven.mangorage.org/releases/</url>
		</repository>
		<repository>
			<id>velocity</id>
			<name>velocity</name>
			<url>https://repo.papermc.io/repository/maven-public/</url>
		</repository>
		
		
				<repository>
			<id>nf</id>
			<name>nf</name>
			<url>https://maven.neoforged.net/releases/</url>
		</repository>
		
		
	</repositories>
	<properties>
		<maven.compiler.target>1.8</maven.compiler.target>
		<maven.compiler.source>1.8</maven.compiler.source>
		
	</properties>
</project>
